--- a/styles.css
+++ b/styles.css
@@ -231,3 +231,14 @@ ul {
     list-style-type: none;
 }
 
+.single-product {
+    margin-top: 80px;
+}
+
+.single-product col-2 img {
+    padding: 0;
+}
+
+.single-product col-2 {
+    padding: 20px;
+}
